--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -54,6 +54,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\BlackPlaceholder.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Controls\WhitePlaceholder.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -65,6 +69,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Controls\BlackPlaceholder.xaml.cs">
+      <DependentUpon>BlackPlaceholder.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\WhitePlaceholder.xaml.cs">
       <DependentUpon>WhitePlaceholder.xaml</DependentUpon>
