--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -54,11 +54,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Controls\BlackPlaceholder.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Controls\WhitePlaceholder.xaml">
+    <Compile Include="Controls\Placeholder.xaml.cs">
+      <DependentUpon>Placeholder.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Utilities\Chesspieces.cs" />
+    <Page Include="Controls\Placeholder.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -69,12 +69,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Controls\BlackPlaceholder.xaml.cs">
-      <DependentUpon>BlackPlaceholder.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\WhitePlaceholder.xaml.cs">
-      <DependentUpon>WhitePlaceholder.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -109,18 +103,42 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="images\black_bishops.png" />
-    <Resource Include="images\black_horse.png" />
-    <Resource Include="images\black_king.png" />
-    <Resource Include="images\black_pawn.png" />
-    <Resource Include="images\black_queen.png" />
-    <Resource Include="images\black_tower.png" />
-    <Resource Include="images\white_bishops.png" />
-    <Resource Include="images\white_horse.png" />
-    <Resource Include="images\white_king.png" />
-    <Resource Include="images\white_pawn.png" />
-    <Resource Include="images\white_queen.png" />
-    <Resource Include="images\white_tower.png" />
+    <Resource Include="Images\black_bishops.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\black_horse.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\black_king.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\black_pawn.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\black_queen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\black_tower.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_bishops.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_horse.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_king.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_pawn.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_queen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\white_tower.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
